add route to api doc
